--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@geoapify/geocoder-autocomplete": "^2.1.0",
     "axios": "^1.11.0",
     "leaflet": "^1.9.4",
     "leaflet-control-geocoder": "^3.2.0",
